# port-sweeper

./: .gitignore  Cargo.toml  LICENSE  README  README.md
.github/scripts/: create-macos-dmg.sh
.github/workflows/: release.yml
assets/: AppIcon.icns
scripts/: port-sweeper.iss
src/: gui.rs  installer_macos.rs  lib.rs  main.rs
