[package]
name = "psweep"
version = "1.0.0"
edition = "2021"
description = "Lightning-fast CLI and GUI to find and kill processes by port"
license = "MIT"
authors = ["Dilli Babu Kadati"]
repository = "https://github.com/dillibabukadati/port-sweeper"

[[bin]]
name = "psweep"
path = "src/main.rs"

[[bin]]
name = "port-sweeper"
path = "src/bin/port-sweeper.rs"

[dependencies]
listeners = "0.4"
sysinfo = "0.32"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
image = "0.25"
